--- a/DataStructure.vcxproj
+++ b/DataStructure.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{66fb0ba8-fa67-4119-9c19-4a6ae578a9bf}</ProjectGuid>
     <RootNamespace>DataStructure</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>LinkList</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
