--- a/DataStructure.vcxproj.filters
+++ b/DataStructure.vcxproj.filters
@@ -73,4 +73,14 @@
       <Filter>DataStructure\头文件</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="resource.h">
+      <Filter>DataStructure\头文件</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="DataStructure.rc">
+      <Filter>资源文件</Filter>
+    </ResourceCompile>
+  </ItemGroup>
 </Project>
