--- a/DataStructure.vcxproj.filters
+++ b/DataStructure.vcxproj.filters
@@ -72,6 +72,18 @@
     <ClCompile Include="树和森林与二叉树间的转换.cpp">
       <Filter>DataStructure\头文件</Filter>
     </ClCompile>
+    <ClCompile Include="BFS图的广度优先遍历.cpp">
+      <Filter>DataStructure\头文件</Filter>
+    </ClCompile>
+    <ClCompile Include="DFS图的深度优先遍历.cpp">
+      <Filter>DataStructure</Filter>
+    </ClCompile>
+    <ClCompile Include="Prime算法.cpp">
+      <Filter>DataStructure</Filter>
+    </ClCompile>
+    <ClCompile Include="kruskal算法.cpp">
+      <Filter>DataStructure</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
