--- a/DataStructure.vcxproj.filters
+++ b/DataStructure.vcxproj.filters
@@ -90,6 +90,9 @@
     <ClCompile Include="Floyd算法求各顶点间最短路径问题.cpp">
       <Filter>DataStructure</Filter>
     </ClCompile>
+    <ClCompile Include="SeqSearch顺序查找.cpp">
+      <Filter>DataStructure</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
