--- a/DataStructure.vcxproj.filters
+++ b/DataStructure.vcxproj.filters
@@ -93,6 +93,18 @@
     <ClCompile Include="SeqSearch顺序查找.cpp">
       <Filter>DataStructure</Filter>
     </ClCompile>
+    <ClCompile Include="BinarySearch二分查找.cpp">
+      <Filter>DataStructure</Filter>
+    </ClCompile>
+    <ClCompile Include="二叉排序树BST.cpp">
+      <Filter>DataStructure</Filter>
+    </ClCompile>
+    <ClCompile Include="HanNuoTa.cpp">
+      <Filter>DataStructure</Filter>
+    </ClCompile>
+    <ClCompile Include="从n个数中选r个数的组合总数.cpp">
+      <Filter>DataStructure</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
