--- a/DataStructure.vcxproj
+++ b/DataStructure.vcxproj
@@ -154,6 +154,7 @@
     <ClCompile Include="树和森林与二叉树间的转换.cpp" />
     <ClCompile Include="树的双亲表示法.cpp" />
     <ClCompile Include="树的孩子表示法.cpp" />
+    <ClCompile Include="鸡兔同笼.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h" />
