--- a/DataStructure.vcxproj.filters
+++ b/DataStructure.vcxproj.filters
@@ -105,6 +105,9 @@
     <ClCompile Include="从n个数中选r个数的组合总数.cpp">
       <Filter>DataStructure</Filter>
     </ClCompile>
+    <ClCompile Include="鸡兔同笼.cpp">
+      <Filter>DataStructure</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
