--- a/DataStructure.vcxproj
+++ b/DataStructure.vcxproj
@@ -141,6 +141,7 @@
     <ClCompile Include="LinkList.cpp" />
     <ClCompile Include="MultiList多重邻接链表.cpp" />
     <ClCompile Include="OrthogonalList十字链表.cpp" />
+    <ClCompile Include="PKOJ_2808.cpp" />
     <ClCompile Include="PostfixExpression.cpp" />
     <ClCompile Include="Prime算法.cpp" />
     <ClCompile Include="SeqSearch顺序查找.cpp" />
