--- a/DataStructure.vcxproj.filters
+++ b/DataStructure.vcxproj.filters
@@ -108,6 +108,9 @@
     <ClCompile Include="鸡兔同笼.cpp">
       <Filter>DataStructure</Filter>
     </ClCompile>
+    <ClCompile Include="PKOJ_2808.cpp">
+      <Filter>DataStructure</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
