--- a/DataStructure.vcxproj.filters
+++ b/DataStructure.vcxproj.filters
@@ -111,6 +111,12 @@
     <ClCompile Include="PKOJ_2808.cpp">
       <Filter>DataStructure</Filter>
     </ClCompile>
+    <ClCompile Include="平衡二叉树.cpp">
+      <Filter>DataStructure</Filter>
+    </ClCompile>
+    <ClCompile Include="分块查找.cpp">
+      <Filter>DataStructure</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
