--- a/DataStructure.vcxproj
+++ b/DataStructure.vcxproj
@@ -155,12 +155,20 @@
     <ClCompile Include="从n个数中选r个数的组合总数.cpp" />
     <ClCompile Include="冒泡排序.cpp" />
     <ClCompile Include="分块查找.cpp" />
+    <ClCompile Include="基数排序.cpp" />
+    <ClCompile Include="堆排序.cpp" />
+    <ClCompile Include="希尔排序.cpp" />
     <ClCompile Include="平衡二叉树.cpp" />
+    <ClCompile Include="归并排序.cpp" />
+    <ClCompile Include="快速排序.cpp" />
     <ClCompile Include="插入排序.cpp" />
+    <ClCompile Include="散列表.cpp" />
     <ClCompile Include="树和森林与二叉树间的转换.cpp" />
     <ClCompile Include="树的双亲表示法.cpp" />
     <ClCompile Include="树的孩子表示法.cpp" />
+    <ClCompile Include="简单选择排序.cpp" />
     <ClCompile Include="红黑树.cpp" />
+    <ClCompile Include="败者树.cpp" />
     <ClCompile Include="鸡兔同笼.cpp" />
   </ItemGroup>
   <ItemGroup>
