--- a/DataStructure.vcxproj.filters
+++ b/DataStructure.vcxproj.filters
@@ -153,6 +153,12 @@
     <ClCompile Include="散列表.cpp">
       <Filter>DataStructure</Filter>
     </ClCompile>
+    <ClCompile Include="PK1001.cpp">
+      <Filter>DataStructure</Filter>
+    </ClCompile>
+    <ClCompile Include="PK1002.cpp">
+      <Filter>DataStructure</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
