--- a/DataStructure.vcxproj
+++ b/DataStructure.vcxproj
@@ -128,6 +128,7 @@
     <ClCompile Include="AdjacencyMatrix邻接矩阵.cpp" />
     <ClCompile Include="BFS图的广度优先遍历.cpp" />
     <ClCompile Include="BinarySearch二分查找.cpp" />
+    <ClCompile Include="binary_search及相关用法.cpp" />
     <ClCompile Include="B树.cpp" />
     <ClCompile Include="CircularDoubleyLinkList.cpp" />
     <ClCompile Include="ClueTree.cpp" />
@@ -150,6 +151,7 @@
     <ClCompile Include="SeqSearch顺序查找.cpp" />
     <ClCompile Include="Sequeue.cpp" />
     <ClCompile Include="SharedStack.cpp" />
+    <ClCompile Include="sort快速排序相关的用法.cpp" />
     <ClCompile Include="Stack.cpp" />
     <ClCompile Include="Tree.cpp" />
     <ClCompile Include="串的暴力匹配与KMP算法.cpp" />
@@ -171,6 +173,9 @@
     <ClCompile Include="树的孩子表示法.cpp" />
     <ClCompile Include="简单选择排序.cpp" />
     <ClCompile Include="红黑树.cpp" />
+    <ClCompile Include="蓝桥191.cpp" />
+    <ClCompile Include="蓝桥3227.cpp" />
+    <ClCompile Include="蓝桥760.cpp" />
     <ClCompile Include="蓝桥杯1259.cpp" />
     <ClCompile Include="败者树.cpp" />
     <ClCompile Include="鸡兔同笼.cpp" />
